--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,32 @@
   pointer-events: none;
 }
 
+/*  */
+.container__label {
+  margin-bottom: 30px;
+  margin-top: 100px;
+  font-size: 20px;
+}
+
+h2{
+  margin-right:  50%;;
+
+}
+
+.container__btn {
+  background-color:red;
+  border: none;
+  color: rgb(239, 236, 236);
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-right: 50%;
+}
+
+/*  */
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -36,3 +62,9 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+/*  */
+
+
